helm/traefik/routes/dashboard-ingress.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard
#   namespace: traefik
#   annotations: 
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`traefik.local.example.com`)
#       kind: Rule
#       services:
#         - name: api@internal
#           kind: TraefikService
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
spec:
  rules:
  - host: traefik.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api@internal
